[build-system]
requires = [ "hatchling", "hatch-vcs" ]
build-backend = "hatchling.build"

[project]
name = "ytpb"
description = "A playback for YouTube live streams"
readme = "README.rst"
version = "2024.4.12"
authors = [ { name = "Maxim Stolyarchuk" } ]
keywords = [ "youtube" ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "av>=11.0.0",
    "click>=8.1.7",
    "cloup>=3.0.4",
    "lxml>=5.0.0",
    "pathvalidate>=3.2.0",
    "pillow>=10.2.0",
    "platformdirs>=4.1.0",
    "pycond>=20230212",
    "python-mpv-jsonipc>=1.2.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "structlog>=23.3.0",
    "timedelta_isoformat>=0.6.2.11",
    "toml>=0.10.2",
    "unidecode>=1.3.7",
    "yt_dlp>=2023.12.30",
]

[project.optional-dependencies]
test = [
    "freezegun>=1.4.0",
    "pytest>=7.4.4",
    "pytest-matcher==2.0.1",
    "pytest-socket>=0.6.0",
    "responses>=0.24.1"
]
dev = [
    "ytpb[test]",
    "pre-commit",
]
docs = [
    "sphinx==7.2.6",
    "sphinx-toolbox==3.5.0",
]

[project.urls]
Source = "https://github.com/xymaxim/ytpb"
Documentation = "https://ytpb.readthedocs.io"

[project.scripts]
ytpb = "ytpb.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
   "/.github",
   "/notebooks",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
pm-patterns-base-dir = "tests/data/expected/"
pm-pattern-file-fmt = "{fn}{callspec}"
