[build-system]
requires = [ "hatchling", "hatch-vcs" ]
build-backend = "hatchling.build"

[project]
name = "ytpb"
description = "A playback for YouTube live streams"
readme = "README.rst"
dynamic = ["version"]
authors = [ { name = "Maxim Stolyarchuk" } ]
keywords = [ "youtube" ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "av>=12.0.0",
    "click>=8.1.7",
    "cloup>=3.0.5",
    "Jinja2>=3.1.4",
    "lxml>=5.2.2",
    "pathvalidate>=3.2.0",
    "pillow>=10.3.0",
    "platformdirs>=4.2.2",
    "pycond>=20230212",
    "python-mpv-jsonipc>=1.2.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "structlog>=24.2.0",
    "timedelta_isoformat>=0.6.2.11",
    "toml>=0.10.2",
    "unidecode>=1.3.8",
    "yt_dlp>=2024.05.27",
]

[project.optional-dependencies]
test = [
    "freezegun>=1.5.1",
    "pytest>=8.2.1",
    "pytest-matcher==2.0.1",
    "pytest-socket>=0.7.0",
    "responses>=0.25.0"
]
dev = [
    "ytpb[test]",
    "pre-commit",
]
docs = [
    "sphinx==7.3.7",
    "sphinx-toolbox==3.5.0",
    "myst-parser==3.0.1",
]

[project.urls]
Source = "https://github.com/xymaxim/ytpb"
Documentation = "https://ytpb.readthedocs.io"

[project.scripts]
ytpb = "ytpb.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "calver-by-date"
local_scheme = "dirty-tag"

[tool.hatch.build.hooks.vcs]
version-file = "src/ytpb/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
   "/.github",
   "/notebooks",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
pm-patterns-base-dir = "tests/data/expected/"
pm-pattern-file-fmt = "{fn}{callspec}{suffix}"
